# DistillerSDK

./: LICENSE  README.md  boot_up.sh  contributing.md  game_config.json  pyproject.toml  pyvenv.cfg
examples/: README.md   app_DS_demo.py  app_camera_paint.py  app_ebook_kid.py  app_gallery.py  app_game_engine.py  app_soul.py  app_tiny_diffusion.py  app_transcription.py  app_wifi_setting.py  load_testing.py  main.py
examples/lib/: deepgram_stt_tools.py  elevenlabs_tts_tools.py  kororo_tts_tools.py  llm_tools.py  openai_tools.py  outte_tts_tools.py  piper_tts_tools.py  requirements.txt  stable_diffusion_tools.py  tts_sandbox.py  whisper_tools.py
hardware/Schematic/: distillerone.sch
src/distiller/: constants.py
src/distiller/drivers/: DevNotes.md  eink_dsp.py  rock_gpio.py  sam.py
src/distiller/firmware/: battery.py  eink_driver_sam.py  main.py  scriptloarder.sh
src/distiller/firmware/Fan/: daemon.ini  daemon.sh  emc2301.sh
src/distiller/firmware/cm4/: main.py
src/distiller/firmware/tools/: bootup_screen_processer.py
src/distiller/gui/: __init__.py  components.py
src/distiller/peripheral/: button.py  camera.py  eink.py  mic.py  speaker.py
src/distiller/peripheral/__pycache__/: eink.dump_1bit-21.py311.1.nbc  eink.dump_1bit-21.py311.2.nbc  eink.dump_1bit-21.py311.nbi  eink.dump_1bit_with_dithering-47.py311.1.nbc  eink.dump_1bit_with_dithering-47.py311.nbi  eink.floydSteinbergDithering_numba-59.py311.1.nbc  eink.floydSteinbergDithering_numba-59.py311.nbi
src/distiller/utils/: audio.py  commons.py  image.py  text.py
